@@ -8,11 +8,22 @@
 
 
 plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
     // Apply the java plugin to add support for Java
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.7'
     // Apply the application plugin to add support for building an application
     id 'application'
+}
+
+configurations {
+    javafxCompile
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'java_final_classes.App'
+    }
 }
 
 javafx {
@@ -23,15 +34,51 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
+}
+def currentOS = org.gradle.internal.os.OperatingSystem.current()
+def platform
+if (currentOS.isWindows()) {
+    platform = 'win'
+} else if (currentOS.isLinux()) {
+    platform = 'linux'
+} else if (currentOS.isMacOsX()) {
+    platform = 'mac'
 }
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     implementation 'com.google.guava:guava:27.0.1-jre'
+    compile "org.openjfx:javafx:11.0.2"
+    compile "org.openjfx:javafx-base:11.0.2:${platform}"
+    compile "org.openjfx:javafx-graphics:11.0.2:${platform}"
+    compile "org.openjfx:javafx-controls:11.0.2:${platform}"
+    compile "org.openjfx:javafx-fxml:11.0.2:${platform}"
+
+    shadow "org.openjfx:javafx:11.0.2"
+    shadow "org.openjfx:javafx-base:11.0.2:${platform}"
+    shadow "org.openjfx:javafx-graphics:11.0.2:${platform}"
+    shadow "org.openjfx:javafx-controls:11.0.2:${platform}"
+    shadow "org.openjfx:javafx-fxml:11.0.2:${platform}"
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
 
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+}
+
 // Define the main class for the application
 mainClassName = 'java_final_classes.App'
+
+task copyJavafxModules(type: Copy) {
+    from configurations.runtimeClasspath
+    include "javafx*${javafx.platform.classifier}.jar"
+    into "${buildDir}/javafx-modules"
+}
